# OOAD_SemesterProject

./: .gitignore  CMakeLists.txt  Makefile  OOAD_SemesterProject.uproject  README.md  debug.txt
Config/: DefaultEngine.ini  DefaultGame.ini
Source/: OOAD_SemesterProject.Target.cs  OOAD_SemesterProjectEditor.Target.cs
Source/OOAD_SemesterProject/: OOAD_SemesterProject.Build.cs  OOAD_SemesterProject.cpp  OOAD_SemesterProjectCharacter.cpp  OOAD_SemesterProjectCharacter.h  OOAD_SemesterProjectGameMode.cpp  OOAD_SemesterProjectGameMode.h  OOAD_SemesterProjectHUD.cpp  OOAD_SemesterProjectHUD.h  OOAD_SemesterProjectProjectile.cpp  OOAD_SemesterProjectProjectile.h
assets/: Level_1.txt  demo.txt  knight.txt  level-1.txt  level-2.txt  level-3.txt  ogre.txt  phoenix.txt  player.txt
inc/: Game.h
inc/Assets/: AssetManager.h
inc/Debug/: Debug.h
inc/Game/: Enemy.h  Entity.h  Game.h  Level.h  Player.h
inc/GameState/: Dungeon.h  DungeonState.h  Encounter.h  EncounterState.h  Ending.h  GameState.h  GameStateFactory.h  MainMenu.h  Menu.h  MenuState.h
inc/Imports/: AsciiManager.h  AssetManager.h
inc/UI/: Button.h  Cell.h  CellMap.h  CellMatrix.h  Color.h  Display.h  Glyph.h  GlyphMap.h  Input.h  Text.h
src/: Debug.cpp  Game.cpp  main.cpp
src/Assets/: AssetManager.cpp
src/Debug/: Debug.cpp
src/Game/: Enemy.cpp  Entity.cpp  Game.cpp  Level.cpp  Player.cpp
src/GameState/: Dungeon.cpp  DungeonState.cpp  Encounter.cpp  EncounterState.cpp  Ending.cpp  GameState.cpp  GameStateFactory.cpp  MainMenu.cpp  Menu.cpp  MenuState.cpp
src/Imports/: AsciiManager.cpp  (+1 more)
(+77 files in other folders)
